fixed margin overlap

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,7 @@
     display:flex;
     align-items:center;
     flex-direction:column;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .img {
